--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -8,78 +7,43 @@
   <script src="js/scripts.js"></script>
   <title>Calculator</title>
 </head>
-
 <body>
   <div class="container">
-      <h1>Calculator</h1>
-    <div class="row">
-      <div class="col-md-6">
-
-        <form id="add">
-          <h3>Addition</h3>
-          <div class="form-group">
-            <label for="first">1st number</label>
-            <input id="first" class="form-control" type="text">
-          </div>
-          <div class="form-group">
-            <label for="second">2nd number</label>
-            <input id="second" class="form-control" type="text">
-          </div>
-          <button class="btn btn-default" type="submit">Add!</button>
-        </form>
-        <div id="addOutput">
-        </div>
+    <h1>Calculator</h1>
+    <form id="calculator">
+      <div class="form-group">
+        <label for="input1">1st number</label>
+        <input id="input1" class="form-control" type="text">
       </div>
-      <div class="col-md-6">
-          <form id="subtract">
-            <h3>Subtraction</h3>
-            <div class="form-group">
-              <label for="subtractFirst">1st number</label>
-              <input id="subtractFirst" class="form-control" type="text">
-            </div>
-            <div class="form-group">
-              <label for="subtractSecond">2nd number</label>
-              <input id="subtractSecond" class="form-control" type="text">
-            </div>
-            <button class="btn btn-default" type="submit">Subtract!</button>
-          </form>
-          <div id="subtractOutput">
-          </div>
-        </div>
-        <div class="col-md-6">
-            <form id="multiply">
-              <h3>Multiplication</h3>
-              <div class="form-group">
-                <label for="multiplyFirst">1st number</label>
-                <input id="multiplyFirst" class="form-control" type="text">
-              </div>
-              <div class="form-group">
-                <label for="multiplySecond">2nd number</label>
-                <input id="multiplySecond" class="form-control" type="text">
-              </div>
-              <button class="btn btn-default" type="submit">Multiply!</button>
-            </form>
-            <div id="multiplyOutput">
-            </div>
-          </div>
-          <div class="col-md-6">
-              <form id="divide">
-                <h3>Division</h3>
-                <div class="form-group">
-                  <label for="divideFirst">1st number</label>
-                  <input id="divideFirst" class="form-control" type="text">
-                </div>
-                <div class="form-group">
-                  <label for="divideSecond">2nd number</label>
-                  <input id="divideSecond" class="form-control" type="text">
-                </div>
-                <button class="btn btn-default" type="submit">Divide</button>
-              </form>
-              <div id="divideOutput">
-              </div>
-            </div>
+      <div class="form-group">
+        <label for="input2">2nd number</label>
+        <input id="input2" class="form-control" type="text">
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="add" checked>Add
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="operator" value="subtract">Subtract
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="radio" name="operator" value="multiply"> Multiply
+        </label>
+      </div>
+      <div>
+        <label>
+          <input type="radio" name="operator" value="divide"> Divide
+        </label>
+      </div>
+      <button class="btn btn-default" type="submit">Go!</button>
+    </form>
+    <div id="output">
+
     </div>
   </div>
 </body>
-
 </html>
